# epub-audiobook-app

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  test_script.js
app/: audio_merge.py  chunker.py  config.py  db.py  deps.py  drive_export.py  epub_parser.py  ffmpeg.py  google_drive.py  main.py  models.py  repository.py  tts_engine.py  video_gen.py  worker.py  youtube.py
app/assets/: colab_kaggle_tts_template.ipynb
app/routes/: books.py  downloads.py  drive.py  logs.py  patches.py  queue.py  video.py  youtube.py
app/static/: style.css
app/templates/: base.html  book_detail.html  book_list.html  chapter_preview.html  chunk_manager.html  drive.html  logs.html  patch_builder.html  upload.html  video_creator.html  youtube.html
data/: synthetic_test.epub
epub_audiobook_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
openspec/: config.yaml
openspec/changes/auto-build-patches/: design.md  proposal.md  tasks.md
openspec/changes/background-queue-observability-and-video-job/: tasks.md
scripts/: test_epub_parse.py  test_merge_and_video.py  test_repo_and_chunker.py  test_toc_and_preview.py  test_tts_single_patch.py  test_worker.py
tests/: test_auto_build.py  test_chapter_exclude.py  test_chunk_files.py  test_chunk_manager.py  test_enable_worker.py  test_health_endpoint.py  test_patch_images.py  test_patch_preview_actions.py  test_patch_rebuild.py  test_pause_flag.py  test_queue_stats.py  test_replace_rules.py  test_reset_all_jobs.py  test_retry_failed.py  test_routes_preview.py  test_toc_filter.py  test_video_job.py
(+28 files in other folders)
